# Process this file with autoconf to produce a configure script.
#
# $Id$
#
AC_INIT(mcl, `cat $srcdir/VERSION`, s.vandongen@chello.nl)
AM_INIT_AUTOMAKE(mcl, `cat $srcdir/VERSION`)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
# JvB
AC_PROG_RANLIB

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([float.h limits.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
# AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_CHECK_FUNCS([memset pow sqrt strchr strpbrk strstr])

# AC_CONFIG_FILES([Makefile])
AC_OUTPUT([
    Makefile
    intalg/Makefile
    mcl/Makefile
    nonema/Makefile
    shcl/Makefile
    shmcl/Makefile
    shmcx/Makefile
    shmx/Makefile
    shmcx/Makefile
    shtest/Makefile
    util/Makefile
    zoem/Makefile
    doc/Makefile
    graphs/Makefile
])

