## Process this file with automake to produce Makefile.in
## $Id$

INCLUDES = -I$(top_srcdir)

noinst_LIBRARIES = libutil.a
libutil_a_SOURCES = alloc.c array.c buf.c checkbounds.c distr.c equate.c \
   file.c hash.c heap.c iomagic.c link.c parse.c txt.c pool.c

EXTRA_DIST = alloc.h array.h buf.h checkbounds.h compile.h distr.h equate.h \
  file.h hash.h heap.h iomagic.h link.h minmax.h parse.h sign.h txt.h \
  pool.h types.h inttypes.h

